[package]
name = "bevy_assets_reflect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Reflection based asset loader plugin for Bevy"
readme = "README.md"
repository = "https://github.com/Leinnan/bevy_assets_reflect"
authors = ["Piotr Siuszko <siuszko@zoho.com>"]
keywords = ["bevy", "assets", "reflection", "plugin"]

[dependencies]
bevy_app = { version = "0.17.0" }
bevy_asset = { version = "0.17.0" }
bevy_ecs = { version = "0.17.0" }
bevy_reflect = { version = "0.17.0" }
bevy_ui = { version = "0.17.0" }
bevy_derive = { version = "0.17.0" }
bevy_device_lang = { version = "0.6", optional = true }
atomicow = { version = "1.1", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0"
